--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "singleQuote": true,
-	"trailingComma": "all",
-	"tabWidth": 4,
-	"semi": false
+    "singleQuote": true,
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "semi": false,
+    "endOfLine": "crlf"
 }
